--- a/application.yml
+++ b/application.yml
@@ -8,9 +8,8 @@ server:
 eureka:
   client:
     service-url:
-      default-zone: ${EUREKA_URI:http://localhost:8761/eureka}
-    register-with-eureka: true
-    fetch-registry: true
+      default-zone: ${EUREKA_URI:http://localhost:8761/eureka} # 1 укажите явный маршрут к серверу eureka (serviceUrl)
+    eureka-service-url-poll-interval-seconds: 35 # 3 укажите интервал в 35 сек через который клиент шлет эхо запрос на сервер
   instance:
-    prefer-ip-address: true
+    prefer-ip-address: true  # 2 использовать IP адрес
     lease-renewal-interval-in-seconds: 30
